fix(msrv): support rustc v1.41

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "noodler"
 version = "0.0.0"
 license = "MIT OR Apache-2.0"
 authors = ["loichyan <loichyan@foxmail.com>"]
-edition = "2021"
+edition = "2018"
+rust-version = "1.41"
 
 description = "A port of the python-ngram project that provides fuzzy search using N-gram."
 keywords = ["fuzzy", "ngrams", "shingles"]
